--- a/src/p.tex
+++ b/src/p.tex
@@ -4625,7 +4625,7 @@ $n$次正方行列
   $\det(E_{n})=1$.
 \end{example}
 \begin{example}
-   $\det(O_{n,n})=0$.
+  $\det(O_{n,n})=0$.
 \end{example}
 
 基本行列
@@ -4645,7 +4645,26 @@ $G(i,j;c)$は三角行列であるので,
 \end{lemma}
 
 
-\subsection{行列式の閉じた式よる表示}
+定義では$1$行目で展開したが,
+実は列で展開しても同じ値が得られる.
+\begin{lemma}
+  \provelater{det:col:expansion:1}
+  \label{lem:det:col:expansion:1}
+  $a_{i,j}$が$(i,j)$-成分である
+    $n$次正方行列$A$に対し,
+    \begin{align*}
+      \det(A)&=\sum_{i=1}^{n}
+      (-1)^{i+1}a_{i,1}\det(\pi_{i,1}(A)).
+    \end{align*}
+\end{lemma}
+
+\Cref{lem:det:col:expansion:1}により次がすぐわかる.
+\begin{theorem}
+  \label{thm:det:transpose}
+$n$次正方行列$A$に対し, $\det(A)=\det(\transposed{A})$.
+\end{theorem}
+
+\section{行列式の閉じた式よる表示}
 
 ここでは, 再帰的に定義されている行列式の定義を展開し,
 閉じた式による表示を与えることを目標とする.
@@ -4691,7 +4710,7 @@ $\Set{1,2,\ldots,n}$の順列をすべて集めた集合を$S_n$とおき,
 とおき,
 $I$に属する組の総数$\#I(\sigma)$を$\sigma$の
 \defit{転倒数}
-\Defit{Inversion}
+\Defit{Inversion number}
 と呼ぶ.
 
 転倒数が偶数である順列を
@@ -4706,7 +4725,7 @@ $I$に属する組の総数$\#I(\sigma)$を$\sigma$の
 
 \begin{definition}
 
-  順列$\sigma\in\S_n$に対し,
+  順列$\sigma\in S_n$に対し,
   \begin{align*}
     \sgn(\sigma)
     =
@@ -4722,9 +4741,237 @@ $I$に属する組の総数$\#I(\sigma)$を$\sigma$の
   と呼ぶ.
 \end{definition}
 
-\subsection{行列式と行基本変形}
+\begin{example}
+  $S_3$について考える.
+  \begin{align*}
+    I([1,2,3])&=\emptyset\\
+    I([1,3,2])&=\Set{(2,3)}\\
+    I([2,1,3])&=\Set{(1,2)}\\
+    I([2,3,1])&=\Set{(1,3),(2,3)}\\
+    I([3,1,2])&=\Set{(1,2),(1,3)}\\
+    I([3,2,1])&=\Set{(1,2),(1,3),(2,3)}
+  \end{align*}
+  であるので,
+  \begin{align*}
+    \sgn([1,2,3])&=1\\
+    \sgn([1,3,2])&=-1\\
+    \sgn([2,1,3])&=-1\\
+    \sgn([2,3,1])&=1\\
+    \sgn([3,1,2])&=1\\
+    \sgn([3,2,1])&=-1.
+  \end{align*}
+\end{example}
 
-\subsection{行列式の線型性と交代性}
+\begin{theorem}
+  \provelater{det:closedformula}
+  $a_{i,j}$を$(i,j)$-成分とする$n$次正方行列$A$に対し,
+  \begin{align*}
+    \det(A)=\sum_{\sigma=[\sigma(1),\sigma(2),\ldots,\sigma(n)]\in S_n}
+    \sgn(\sigma)
+    a_{1,\sigma(1)}a_{2,\sigma(2)}\cdots a_{n,\sigma(n)}
+  \end{align*}
+\end{theorem}
+
+
+\section{行列式の多重線型性と交代性}
+
+\begin{theorem}
+  \provelater**{det:multilinear:row}
+  \label{thm:det:multilinear:row}
+  $A$を$a_{i,j}$を$(i,j)$-成分とする$n$次正方行列,
+  $A'$を$a'_{i,j}$を$(i,j)$-成分とする$n$次正方行列,
+  $A''$を$a''_{i,j}$を$(i,j)$-成分とする$n$次正方行列
+  とする.
+  $t\in\Set{1,\ldots,n}$
+  $\alpha$を数とする.
+  \begin{enumerate}
+  \item
+    \provelater**{scalar}
+    $A'$の$t$行目を$\alpha$倍したもを$A$とすると,
+    $\det(A)=\alpha\det(A')$.
+
+    つまり,
+    $A$, $A'$が
+    \begin{align*}
+      \begin{cases}
+        a_{i,j}=a'_{i,j} & (i\neq t)\\
+        a_{i,j}=\alpha a'_{i,j} & (i = t)
+      \end{cases}
+    \end{align*}
+    をみたすなら,
+    \begin{align*}
+      \det(A)=\alpha\det(A').
+    \end{align*}
+  \item
+    \provelater**{sum}
+    $A$, $A'$, $A''$は$t$行目以外は等しいとし,
+    $A$の$t$行目は$A'$の$t$行目と$A''$の$t$行目の和であるとすると,
+    $\det(A)=\det(A')+\alpha(A'')$.
+
+    つまり,
+    $A$, $A'$, $A''$が
+    \begin{align*}
+      \begin{cases}
+        a_{i,j}=a'_{i,j} = a''_{i,j} & (i\neq t)\\
+        a_{i,j}=a'_{i,j} + a''_{i,j} & (i = t)
+      \end{cases}
+    \end{align*}
+    をみたすなら,
+    \begin{align*}
+      \det(A)=\det(A')+\alpha(A'').
+    \end{align*}
+  \end{enumerate}
+\end{theorem}
+
+
+\begin{theorem}
+  \provelater{det:alt:row:neg}
+  \label{thm:det:alt:row:neg}
+  $n>1$とし, $t<s\leq n$とする. 
+  $n$次正方行列$A$の$s$行目と$t$行目を入れ替えたものが$A'$ならば,
+  $\det(A)=-\det(A')$.
+
+  つまり, 
+  $A$を$a_{i,j}$を$(i,j)$-成分とする$n$次正方行列,
+  $A'$を$a'_{i,j}$を$(i,j)$-成分とする$n$次正方行列
+  とする.
+  $A$, $A'$が
+  \begin{align*}
+    \begin{cases}
+      a_{i,j}=a'_{i,j} & (i\not\in \Set{t,s})\\
+      a_{i,j}=a'_{s,j} & (i = t)\\
+      a_{i,j}=a'_{t,j} & (i = s)
+    \end{cases}
+  \end{align*}
+  をみたすなら,
+  \begin{align*}
+    \det(A)=-\det(A').
+  \end{align*}
+\end{theorem}
+
+\begin{theorem}
+  \provelater{det:alt:row:zero}
+  \label{thm:det:alt:row:zero}
+  $n>1$とし, $t<s\leq n$とする. 
+  $n$次正方行列
+  $A$の$s$行目と$t$行目が等しいなら$\det(A)=0$.
+
+  つまり, 
+  $A$を$a_{i,j}$を$(i,j)$-成分とする$n$次正方行列
+  とする.
+  $t, s\in\Set{1,\ldots,n}$, $t<s$とする. 
+  \begin{align*}
+    j\in\Set{1,\ldots,n}\implies a_{s,j}=a'_{t,j}
+  \end{align*}
+  をみたすなら,
+  \begin{align*}
+    \det(A)=0.
+  \end{align*}
+\end{theorem}
+
+
+\Cref{thm:det:transpose}を使うと,
+\cref{thm:det:multilinear:row,thm:det:alt:row:neg,thm:det:alt:row:zero}
+から以下が導かれる:
+
+\begin{theorem}
+  $A$を$a_{i,j}$を$(i,j)$-成分とする$n$次正方行列,
+  $A'$を$a'_{i,j}$を$(i,j)$-成分とする$n$次正方行列,
+  $A''$を$a''_{i,j}$を$(i,j)$-成分とする$n$次正方行列
+  とする.
+  $t\in\Set{1,\ldots,n}$
+  $\alpha$を数とする.
+  \begin{enumerate}
+  \item
+    \provelater**{scalar}
+    $A'$の$t$列目を$\alpha$倍したもを$A$とすると,
+    $\det(A)=\alpha\det(A')$.
+
+    つまり,
+    $A$, $A'$が
+    \begin{align*}
+      \begin{cases}
+        a_{i,j}=a'_{i,j} & (j\neq t)\\
+        a_{i,j}=\alpha a'_{i,j} & (j = t)
+      \end{cases}
+    \end{align*}
+    をみたすなら,
+    \begin{align*}
+      \det(A)=\alpha\det(A').
+    \end{align*}
+  \item
+    \provelater**{sum}
+    $A$, $A'$, $A''$は$t$列目以外は等しいとし,
+    $A$の$t$列目は$A'$の$t$列目と$A''$の$t$列目の和であるとすると,
+    $\det(A)=\det(A')+\alpha(A'')$.
+
+    つまり,
+    $A$, $A'$, $A''$が
+    \begin{align*}
+      \begin{cases}
+        a_{i,j}=a'_{i,j} = a''_{i,j} & (j\neq t)\\
+        a_{i,j}=a'_{i,j} + a''_{i,j} & (j = t)
+      \end{cases}
+    \end{align*}
+    をみたすなら,
+    \begin{align*}
+      \det(A)=\det(A')+\alpha(A'').
+    \end{align*}
+  \end{enumerate}
+\end{theorem}
+
+
+\begin{theorem}
+  $n>1$とし, $t<s\leq n$とする. 
+  $n$次正方行列$A$の$s$列目と$t$列目を入れ替えたものが$A'$ならば,
+  $\det(A)=-\det(A')$.
+
+  つまり, 
+  $A$を$a_{i,j}$を$(i,j)$-成分とする$n$次正方行列,
+  $A'$を$a'_{i,j}$を$(i,j)$-成分とする$n$次正方行列
+  とする.
+  $A$, $A'$が
+  \begin{align*}
+    \begin{cases}
+      a_{i,j}=a'_{i,j} & (j\not\in \Set{t,s})\\
+      a_{i,j}=a'_{i,s} & (j = t)\\
+      a_{i,j}=a'_{i,t} & (j = s)
+    \end{cases}
+  \end{align*}
+  をみたすなら,
+  \begin{align*}
+    \det(A)=-\det(A').
+  \end{align*}
+\end{theorem}
+
+\begin{theorem}
+  \provelater{det:alt:row:zero}
+  \label{thm:det:alt:row:zero}
+  $n>1$とし, $t<s\leq n$とする. 
+  $n$次正方行列
+  $A$の$s$列目と$t$列目が等しいなら$\det(A)=0$.
+
+  つまり, 
+  $A$を$a_{i,j}$を$(i,j)$-成分とする$n$次正方行列
+  とする.
+  $t, s\in\Set{1,\ldots,n}$, $t<s$とする. 
+  \begin{align*}
+    i\in\Set{1,\ldots,n}\implies a_{i,s}=a'_{i,t}
+  \end{align*}
+  をみたすなら,
+  \begin{align*}
+    \det(A)=0.
+  \end{align*}
+\end{theorem}
+
+基本行列$H(i,j)$の行列式を計算する.
+\begin{example}
+  基本行列$H(i,j)$は,
+  単位行列$E_n$の$i$行目と$j$行目を入れ替えたものである.
+  従って$\det(H(i,j))=-\det(E_n)=-1$.
+\end{example}
+\section{行列式と行基本変形}
+
 
 \endinput
 \section{行基本変形}
