--- a/src/p.tex
+++ b/src/p.tex
@@ -4664,7 +4664,7 @@ $G(i,j;c)$は三角行列であるので,
 $n$次正方行列$A$に対し, $\det(A)=\det(\transposed{A})$.
 \end{theorem}
 
-
+$1$行目や$1$列目以外の行や列で展開することもできる.
 \begin{theorem}
   \provelater{det:row:expansion}
   \label{thm:det:row:expansion}
